# shuftlib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: audit.yml  ci.yml
src/: cards.rs  lib.rs  tressette.rs
src/common/: cards.rs  hands.rs  mod.rs
tests/: tressette.rs
