[package]
name = "shuftlib"
version = "0.1.0"
edition = "2021"
authors = ["Sebastiano Giordano"]
categories = ["game-development"]
description = "A generic library for card games and related topics"
documentation = "https://docs.rs/shuftlib"
keywords = ["cards", "card_games"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/shuftle/shuftlib"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
array-init = "2.1.0"
num-rational = "0.4.1"
rand="0.8"
strum = {version="0.25", default-features=false, features=["derive"]}

[dev-dependencies]
proptest="1.4"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]

unwrap_in_result = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
todo = "warn"
cast_lossless = "warn"
cognitive_complexity = "warn"
